libqrencode NEWS - Overview of changes
======================================

Version 4.1.0 (2020.8.xx)
-------------------------
* Command line tool "qrencode" has been improved:
    * New option "--inline" has been added. (Thanks to @jp-bennett)
    * UTF8 mode now supports ANSI256 color. (Thanks to András Veres-
	  Szentkirályi)
* Some compile time warnings have been fixed.
* Various CMake support improvements. (Thanks to @mgorny and @sdf5)
* Some minor bug fixes. (Thanks to Lonnie Abelbeck and Frédéric Wang)
* Some documentation/manpage improvements. (Thanks to Dan Jacobson)

Release Note:
The internal representation of the output code has been slightly changed -
the second bit from LSB side now represents; 1:ECC bit / 0:data bit.
This change is only for debug purposes and does not affect user applications.


Version 4.0.2 (2018.6.6)
------------------------
* Build script fixes. (Thanks to @mgorny)


Version 4.0.1 (2018.6.4)
------------------------
* CMake support improved.
* New test scripts have been added.
* Some compile time warnings have been fixed.


Version 4.0.0 (2017.9.21)
-------------------------
* Memory efficiency has been improved.
* QRcode_clearCache() has been deprecated.
* Error correction code generating functions have been improved.
* Command line tool "qrencode" has been improved:
	* XPM support. (Thanks to Tobias Klauser)
	* PNG32 (direct color mode) support. (Thanks to Greg Hart)
	* EPS output now supports foreground and background color.
	* New options "-r" and "--svg-path" have been added.
	  (Thanks to Robert Petersen and @Oblomov)
* CMake support has been added. (optional) (Thanks to @misery)
* Various bug fixes.
* Various performance improvements.

Release Note:
While the API has not been changed since the previous major release, we
incremented the major version number of libqrencode to 4 because the
implementation of the library has been largely changed.
