@@ -155,6 +155,10 @@ static void usage(int help, int longopt, int status)
 "               specify foreground/background color in hexadecimal notation.\n"
 "               6-digit (RGB) or 8-digit (RGBA) form are supported.\n"
 "               Color output support available only in PNG, EPS and SVG.\n\n"
+"      --strict-version\n"
+"               disable automatic version number adjustment. If the input data is\n"
+"               too large for the specified version, the program exits with the\n"
+"               code of 1.\n\n"
 "  -V, --version\n"
 "               display the version number and copyrights of the qrencode.\n\n"
 "      --verbose\n"
