@@ -85,6 +85,11 @@ specify foreground/background color in hexadecimal notation.
 6-digit (RGB) or 8-digit (RGBA) form are supported.
 Color output support available only in PNG, EPS and SVG.
 .TP
+.B \-\-strict\-version
+disable automatic version number adjustment. If the input data is
+too large for the specified version, the program exits with the
+code of 1.
+.TP
 .B \-V, \-\-version
 display the version number and copyrights of the qrencode.
 .TP
